# Serial

./: .gitmodules  CMakeLists.txt  Makefile
cmake/: StaticAnalyzers.cmake
docs/: Print_SRS.docx  findMulti1.drawio  findMulti2.drawio
include/: Serial.h
src/: CMakeLists.txt  Serial.c
tests/: CMakeLists.txt
tests/unit_tests/: CMakeLists.txt  UT_Serial.cpp
tests/unit_tests/mocks/include/: MocksSerial.h
tests/unit_tests/mocks/src/: MocksSerial.cpp
